v1.0.4 - Added ability to use multiple endpoints to junctioned volumes